# IME-Controller

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: app.rc  app.res
src/: config.rs  constants.rs  error.rs  logger.rs  main.rs
src/hooks/: event_loop_hook.rs  mod.rs
src/tray/: create_window.rs  hotkey.rs  icon.rs  menu.rs  mod.rs  notifications.rs
src/utils/: check_autostart_status.rs  hot_key.rs  mod.rs  parse_hotkey.rs
